<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlaceIt</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="loginTitle">Please login with your google account</string>
    <string name="new_pi_title">Create a Location Place-It Reminder</string>
    <string name="new_cat_pi_title">Create a Category Place-It Reminder</string>
    <string name="new_pi_name">Name :</string>
    <string name="new_pi_des">Description :</string>
    <string name="new_pi_date">Date to post :</string>
    <string name="new_pi_repost">Repost :</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="new_pi_category">Please select categories:</string>
    <string name="category_1">First Category </string>
    <string name="category_2">Second Category</string>
    <string name="category_3">Third Category </string>
    <string name="invalid_input">Please enter a name for the place-it.</string>
    <string name="invalid_category">Please select at leaset one category.</string>
    
    <string name="mark_complete">Mark Complete</string>
    <string name="do_repost">Re-post</string>
	<string name="do_delete">Delete</string>
	<string name="alert_title">You\'ve hit a Place-it</string>

	<string-array name="repost_options">
        <item>None</item>
        <item>Every 1 minute</item>
        <item>Every 2 minutes</item>
        <item>Every 3 minutes</item>
        <item>Every 4 minutes</item>
        <item>Every 5 minutes</item>
        <item>Every 6 minutes</item>
        <item>Every 7 minutes</item>
    </string-array>
    
	<string-array name="categories">
	    <item>None</item>
	    <item>Grocery</item>
	    <item>Auto Shop</item>
	    <item>School</item>
	    <item>Bus Station</item>
	    <item>Local Business</item>
	    <item>Airport</item>
	</string-array>
</resources>
